Cambio general en imagenes

--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
                  Hi! I'm Adriana Urrego,<br> <strong>Product Manager</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="Images/Hero.jpg" width="600" height="390" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="./Images/Hero.jpeg" width="600" height="390" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
