--- a/Product-manager/index.html
+++ b/Product-manager/index.html
@@ -38,7 +38,7 @@
                  <strong>Product Manager</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="./Images/Product-manager-hero.png" width="600" height="350" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="./Images/Product-manager-hero.jpeg" width="600" height="350" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
