--- a/Project-manager/index.html
+++ b/Project-manager/index.html
@@ -38,7 +38,7 @@
                  <strong>Project Manager</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="./Images/Project-manager-hero.png" width="600" height="390" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="./Images/Project-manager-hero.jpeg" width="600" height="390" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
