--- a/Web-development/index.html
+++ b/Web-development/index.html
@@ -38,7 +38,7 @@
                  <strong>Web Development</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="./Images/Web-development-hero.png" width="600" height="390" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="./Images/Web-development-hero.jpeg" width="600" height="390" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
