--- a/Usability/index.html
+++ b/Usability/index.html
@@ -38,7 +38,7 @@
                  <strong>Usability</strong>
             </h1>
             <figure class="hero-imageContainer">
-                <img class="hero-image" src="./Images/Usability-hero.png" width="600" height="390" alt="Imagen principal del sitio"> 
+                <img class="hero-image" src="./Images/Usability-hero.jpeg" width="600" height="390" alt="Imagen principal del sitio"> 
             </figure>
         </div>
     </section>
