Se añaden algunas sombras a las tarjetas

--- a/Project-manager/index.html
+++ b/Project-manager/index.html
@@ -14,10 +14,12 @@
     <i class="icon-menu burger-button" id="burger-menu"></i>
     <header class="header">
         <div class="container">
-            <figure class="logo">
-                <img src= "../Images/logo.png" height= "70" alt="Logo de http://adrianaurrego.com"> 
-            </figure>
-            <nav class="menu">
+            <a href="../Index.html" target="blank">
+                <figure class="logo">
+                    <img src= "../Images/logo.png" height= "70" alt="Logo de http://adrianaurrego.com"> 
+                </figure>
+                <nav class="menu">
+            </a>
                 <ol>
                     <li>
                         <a class="link" href="../Index.html" target="blank">About me</a>
