--- a/Web-development/index.html
+++ b/Web-development/index.html
@@ -14,9 +14,11 @@
     <i class="icon-menu burger-button" id="burger-menu"></i>
     <header class="header">
         <div class="container">
-            <figure class="logo">
-                <img src= "../Images/logo.png" height= "70" alt="Logo de http://adrianaurrego.com"> 
-            </figure>
+            <a href="../Index.html" target="blank">
+                <figure class="logo">
+                    <img src= "../Images/logo.png" height= "70" alt="Logo de http://adrianaurrego.com"> 
+                </figure>
+            </a>
             <nav class="menu">
                 <ol>
                     <li>
