Cambios en los tamaños para mejorar responsive

--- a/Index.html
+++ b/Index.html
@@ -80,6 +80,7 @@
                             <p>PMP</p>
                             <!-- <P>MS Project</P> -->
                             <p>Monday</p>
+                        </div>
                     </div>
                 </article>
                 <article class="experience">
@@ -93,7 +94,8 @@
                         <div class="skills">
                             <!-- <p>Communication</p> -->
                             <p>Google Analytics</p>
-                            <P>Power BI</P>                    
+                            <P>Power BI</P> 
+                        </div>                   
                     </div>
                 </article>
                 <article class="experience">
@@ -109,6 +111,7 @@
                             <p>UI</p>
                             <P>Figma</P>
                             <p>Hotjar</p>
+                        </div>
                     </div>
                 </article>
                 <article class="experience">
@@ -124,6 +127,7 @@
                             <p>CSS</p>
                             <P>JS</P>
                             <p>Python</p>
+                        </div>
                     </div>
                 </article>
             </article>
