--- a/Index.html
+++ b/Index.html
@@ -28,6 +28,9 @@
                     <li>
                         <a class="link" href="#Contact">Contact</a>
                     </li>
+                    <li>
+                        <a class="link" href="https://adrianaurrego.wordpress.com/" target="blank">Blog</a>
+                    </li>
                 </ol>
             </nav>
         </div>
