Arreglo de boton Ver Mas

--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,7 @@
                     <div class="experience-detail">
                         <h3 class="experience-title">Project Management</h3>
                         <p class="experience-description">I have more than 6 years of experience leading hardware and software projects with cross-functional teams around the world.</p>
-                        <button class="experience-button"><a href="./Project-manager/index.html" target="blank">Ver más</a></button>
+                        <button class="experience-button"><a href="./Project-manager/index.html" target="blank">See More</a></button>
                         <div class="skills">
                             <p>Agile</p>
                             <p>PMP</p>
@@ -93,7 +93,7 @@
                     <div class="experience-detail">
                         <h3 class="experience-title">Product Management</h3>
                         <p class="experience-description">It’s my current position, and it has allowed me to see the big picture, and think ahead in order to make products more user-friendly.</p>
-                        <button class="experience-button"><a href="./Product-manager/index.html" target="blank">Ver más</a></button>
+                        <button class="experience-button"><a href="./Product-manager/index.html" target="blank">See More</a></button>
                         <div class="skills">
                             <!-- <p>Communication</p> -->
                             <p>Google Analytics</p>
@@ -108,7 +108,7 @@
                     <div class="experience-detail">
                         <h3 class="experience-title">Usability</h3>
                         <p class="experience-description">A passion recently discovered that has allowed me to develop my empathy towards users, and use it to work in the development process of software that the costumer enjoys.</p>
-                        <button class="experience-button"><a href="./Usability/index.html" target="blank">Ver más</a></button>
+                        <button class="experience-button"><a href="./Usability/index.html" target="blank">See More</a></button>
                         <div class="skills">
                             <p>UX</p>
                             <p>UI</p>
@@ -124,7 +124,7 @@
                     <div class="experience-detail">
                         <h3 class="experience-title">Web Development</h3>
                         <p class="experience-description">I don’t consider myself an expert on this matter, but it has become a must in the set of skills required on my field, and I’m constantly educating myself on it.</p>
-                        <button class="experience-button"><a href="./Web-development/index.html" target="blank">Ver más</a></button>                    
+                        <button class="experience-button"><a href="./Web-development/index.html" target="blank">See More</a></button>                    
                         <div class="skills">
                             <p>HTML5</p>
                             <p>CSS</p>
