Adición blog en subpáginas y ajustes a web-development

--- a/Product-manager/index.html
+++ b/Product-manager/index.html
@@ -30,6 +30,9 @@
                     <li>
                         <a class="link" href="../Index.html" target="blank">Contact</a>
                     </li>
+                    <li>
+                        <a class="link" href="https://adrianaurrego.wordpress.com/" target="blank">Blog</a>
+                    </li>
                 </ol>
             </nav>
         </div>
