--- a/Project-manager/index.html
+++ b/Project-manager/index.html
@@ -8,7 +8,8 @@
     <title>Project Management</title>    
     <link rel="icon" type="image.png" href="../Images/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">   
+
 </head>
 <body>
     <i class="icon-menu burger-button" id="burger-menu"></i>
@@ -29,6 +30,9 @@
                     </li>
                     <li>
                         <a class="link" href="../Index.html" target="blank">Contact</a>
+                    </li>
+                    <li>
+                        <a class="link" href="https://adrianaurrego.wordpress.com/" target="blank">Blog</a>
                     </li>
                 </ol>
             </nav>
