--- a/Index.html
+++ b/Index.html
@@ -85,7 +85,7 @@
                     <div class="experience-detail">
                         <h3 class="experience-title">Product Management</h3>
                         <p class="experience-description">It’s my current position, and it has allowed me to see the big picture, and think ahead in order to make products more user-friendly.</p>
-                        <button class="experience-button1"><a href="#modal">See More</a></button>    
+                        <button class="experience-button1" id="product-management"><a href="#modal">See More</a></button>    
                         <div class="modal1 hidden">
                             <div class="modal-container">
                                 <img class="modal-container-close1" src="https://img.icons8.com/windows/32/000000/macos-close.png"/>
@@ -122,7 +122,7 @@
                     <div class="experience-detail">
                         <h3 class="experience-title">Project Management</h3>
                         <p class="experience-description">I have more than 6 years of experience leading hardware and software projects with cross-functional teams around the world.</p>
-                        <button class="experience-button2"><a href="#modal">See More</a></button>
+                        <button class="experience-button2" id="project-management"><a href="#modal">See More</a></button>
                         <div class="modal2 hidden">
                             <div class="modal-container">
                                 <img class="modal-container-close2" src="https://img.icons8.com/windows/32/000000/macos-close.png"/>
@@ -153,7 +153,7 @@
                     <div class="experience-detail">
                         <h3 class="experience-title">Design</h3>
                         <p class="experience-description">A passion recently discovered that has allowed me to develop my empathy towards users, and use it to work in the development process of software that the costumer enjoys.</p>
-                        <button class="experience-button3"><a href="#modal">See More</a></button>
+                        <button class="experience-button3" id="design"><a href="#modal">See More</a></button>
                         <div class="modal3 hidden">
                             <div class="modal-container">
                                 <img class="modal-container-close3" src="https://img.icons8.com/windows/32/000000/macos-close.png"/>
@@ -210,7 +210,7 @@
                     <div class="experience-detail">
                         <h3 class="experience-title">Web Development</h3>
                         <p class="experience-description">I don’t consider myself an expert on this matter, but it has become a must in the set of skills required on my field, and I’m constantly educating myself on it.</p>
-                        <button class="experience-button4"><a href="#modal">See More</a></button>
+                        <button class="experience-button4" id="web-development"><a href="#modal">See More</a></button>
                         <div class="modal4 hidden">
                             <div class="modal-container">
                                 <img class="modal-container-close4" src="https://img.icons8.com/windows/32/000000/macos-close.png"/>
