--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -1027,7 +1027,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-text">
-                    <h2 class="footer-title">Let's make this plan a reallity.</h2>
+                    <h2 class="footer-title">Let's make this plan a reality.</h2>
                 </div>
                 <div class="footer-contact">
                     <a href="mailto:aurregom@gmail.com" class="contact-item">
